--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://matidragon-yt.github.io/page/css/main.css">
   <meta name="description" content="Comienza a codificar SCM y JS con mayor fácilidad">
 </head>
 <body>
@@ -34,7 +34,7 @@
 [YouTube](https://youtube.com/@MatiDragon)
 [Twitter](https://twitter.com/@MatiDragon)
 :::
-<script src="./js/main.min.js"></script>
+<script src="https://matidragon-yt.github.io/page/js/main.min.js"></script>
 
 <script>
 const txt = [
