--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-
+---
+title: Home
+---
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Página Principal</title>
+	<title>{{ page.title }}</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
